--- a/creds.yml
+++ b/creds.yml
@@ -1,2 +1,2 @@
-aws_access_key: AKIAT6JIZW5LGRLIGSCK 
-aws_secret_key: uwgN1G1p/x0Ehvv1h6OvB6jicIHIS24vbnl8xeYi1
+aws_access_key: xxxxxx
+aws_secret_key: xxxxx
